Changes done in configuration Files

--- a/CCAVENUEIntegration2/appsettings.json
+++ b/CCAVENUEIntegration2/appsettings.json
@@ -4,5 +4,15 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CCavenueURL": "https://test.ccavenue.com/transaction/transaction.do?command=initiateTransaction",
+  "CCAvenuePaymentConfirmationURL": "http://localhost:57770/Home/PaymentCofirmation",
+  "CCAvenueCancelURL": "http://localhost:57770/Home/PaymentCancel",
+  "CCAvenueWorkingKey": "29EF157CB095D69288B372CF8469CE12",
+  "CCAvenueAccess_code": "AVDE03HA04CA28EDAC",
+  "CCAvenueMerchentID": "232393",
+  "CCAvenueRequestType": "JSON",
+  "CCAvenueResponseType": "JSON",
+  "CCAvenueVersion": "1.1",
+  "CCAvenueCurrency": "INR"
 }
